--- a/App/FlaskApp/static/Dashboard.css
+++ b/App/FlaskApp/static/Dashboard.css
@@ -25,13 +25,13 @@ header{
     z-index: 1;
 }
 .flex-column {
-    display: none;
+    display: block;
 }
 h1{
     font-size: 2rem;
     font-weight: 400;
 }
-.flex-column{
+#flex-column{
     display: none;
 }
 /* block one having navigation elements on the left ---------------------*/
@@ -279,6 +279,9 @@ input[type="search"]::-webkit-search-cancel-button {
     #n-block {
         left: 0;
     }
+    #flex-column{
+    display: block;
+    }
 }
 @media (max-width: 590px){
     #n-block{
@@ -303,6 +306,7 @@ input[type="search"]::-webkit-search-cancel-button {
         display: block;
         transition: 1s;
     }
+
     
 }
 
