--- a/App/FlaskApp/templates/sign-in.html
+++ b/App/FlaskApp/templates/sign-in.html
@@ -20,7 +20,7 @@
             </div>
         {% endif %}
     {% endwith %}
-        {{ form.hidden_tag() }} <!-- Include hidden tag for CSRF protection -->
+        {{ form.hidden_tag() }}
         <h1>EdArT</h1>
         <div class="mx-4">
             <h3>Sign Up</h3>
