--- a/App/FlaskApp/static/CreatePost.css
+++ b/App/FlaskApp/static/CreatePost.css
@@ -90,11 +90,10 @@ body {
 
 /* Preview box */
 #preview {
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
-    height: 100%;
-    width: auto;
+    width: 100%;
     background-color: #ffffff;
     color: #8f8e8e;
     font-size: 16px;
@@ -142,6 +141,7 @@ body {
         padding: 15px;
         width:  100vw;
         max-width: 80vw;
+        transition: 1s;
     }
 
     .upload-section h2 {
@@ -151,8 +151,47 @@ body {
     .icon-label {
         font-size: 25px;
     }
-
-    #preview {
-        height: 150px;
+     .preview-box img,
+    .preview-box video{
+        height: auto;
+        width: auto;
     }
+    #preview{
+    height: 100%;
+    }
+
 }
+@media (max-width: 800px){
+    .container {
+        padding: 15px;
+        width:  100vw;
+        max-width: 80vw;
+        transition: 1s;
+    }
+     #preview{
+        height: 100%;
+        }
+}
+
+.flash-messages {
+    margin: 20px 0;
+}
+
+.alert {
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.alert-success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.alert-danger {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
+
