--- a/App/FlaskApp/static/Dashboard.css
+++ b/App/FlaskApp/static/Dashboard.css
@@ -22,7 +22,7 @@ header{
     transform: translateX(-50%);
     position: relative;
     box-shadow: 0 0 3px black;
-    z-index: 1;
+    z-index: 0;
 }
 .flex-column {
     display: block;
@@ -67,7 +67,7 @@ h1{
 #n-block {
     margin-left: auto;
     margin-right: auto;
-    max-width: 600px;
+    max-width: 700px;
     padding: 0 2rem;
     top: 1em;
     left: -3em;
@@ -93,6 +93,7 @@ h1{
 .comment input{
     border: none;
     border-bottom: 1px solid gray;
+    border-radius: none;
     padding: 0.7em 2em;
     width: 50%;
 }
@@ -104,6 +105,63 @@ h1{
     font-size: 1.4rem;
     cursor: pointer;
 }
+#like-comment i, #save i{
+    font-size: 1.5em;
+    cursor: pointer;
+}
+    .post-container {
+            border: none;
+        }
+        .post-card {
+            margin-bottom: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            overflow: hidden;
+            background-color: #fff;
+        }
+        .post-header {
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
+        }
+        .profile-img {
+            height: 50px;
+            width: 50px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-right: 15px;
+        }
+        .post-content {
+            padding: 15px;
+        }
+        .post-content img {
+            width: 100%;
+            height: auto;
+        }
+        .post-actions {
+            display: flex;
+            justify-content: space-between;
+            padding: 10px;
+            border-top: 1px solid #ddd;
+        }
+        .caption {
+            background-color: #000;
+            color: #fff;
+            padding: 10px;
+            font-weight: 500;
+            margin-top: 10px;
+        }
+        .comment-input {
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            border-top: 1px solid #ddd;
+        }
+        .comment-input input {
+            flex-grow: 1;
+            margin-right: 10px;
+        }
 /* block three having notification and suggestion elements on the right ----------------------------------------------*/
 #block-3 {
     background-color: white;
@@ -229,15 +287,36 @@ input[type="search"]::-webkit-search-cancel-button {
     color: #333;
 }
 
+.flash-messages {
+    margin: 20px 0;
+}
+
+.alert {
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.alert-success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.alert-danger {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
 /* Responsive adjustments */
 @media (max-width: 1000px) {
     #block-1, #block-3 {
         display: none; /* Hide blocks on medium and smaller screens */
     }
     #n-block {
-        width: 80%;
-        max-width: 80%;
-        padding: 0 1rem;
+        width: 100%;
+        max-width: 100%;
+        padding: 0;
         transition: 2s;
     }
     /* bottom bar from middle to small screen */
@@ -246,6 +325,7 @@ input[type="search"]::-webkit-search-cancel-button {
         border: none;
         display: flex;
         justify-content: space-around;
+        left: 0;
         position: fixed;
         bottom: 0;
         width: 100vw;
@@ -263,7 +343,8 @@ input[type="search"]::-webkit-search-cancel-button {
 
 @media (max-width: 990px){
      #n-block{
-        width: 65%;
+
+        width: 85%;
         max-width: 80%;
         margin: 0;
         transition: 1s;   
@@ -275,6 +356,7 @@ input[type="search"]::-webkit-search-cancel-button {
     header .m-0{
         display: none;
         transition: 1s;
+        padding: 0;
     }
     #n-block {
         left: 0;
@@ -288,13 +370,15 @@ input[type="search"]::-webkit-search-cancel-button {
         width: 100%;
         max-width: 100%;
         margin: 0; 
-        transition: 1s;  
+        transition: 1s;
+        padding: 0;
     }
     header{
         display: flex;
         justify-content: space-between;
         transition: 0.7s;
         border: none;
+        padding: 0;
         box-shadow: none;
        
     }
