--- a/App/FlaskApp/static/account.css
+++ b/App/FlaskApp/static/account.css
@@ -117,6 +117,10 @@
 .comment input:focus {
     outline: none;
 }
+#like-comment i, #save i{
+    font-size: 1.5em;
+    cursor: pointer;
+}
 /* bottom navigation bar on small screens  =-------------------- */
 .m-0 ul{
     display: none;
@@ -155,6 +159,7 @@
     .m-0 ul {
         background-color: rgb(250, 250, 250);
         border: none;
+        left:0;
         display: flex;
         justify-content: space-around;
         position: fixed;
