--- a/App/FlaskApp/static/sign-up.css
+++ b/App/FlaskApp/static/sign-up.css
@@ -94,3 +94,24 @@ input{
     background-color: #6c757d;
     color: white;
 }
+.flash-messages {
+    margin: 20px 0;
+}
+
+.alert {
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.alert-success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.alert-danger {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
