--- a/App/FlaskApp/templates/Account.html
+++ b/App/FlaskApp/templates/Account.html
@@ -43,115 +43,61 @@
     </div>
 </div>
 <!-- user posts  =----------------------------------------------- -->
-<div id="n-block" class="col-12 col-lg-6 mx-auto" >
-    <div id="block-n" class="my-4 px-4 py-2" style="height: auto;">
-    <!-- user and time ago posted --------------post------->
-    <div  id="post" class="py-3">
-       <div class="m-0">
-           <img src="articolo-migliori-anime-invernali-crunchyroll-01.jpg" class="rounded-circle mb-1" style="height: 50px; width: 48px; object-fit: cover;" alt="profile">
-           <span class="mb-4" style=" padding:  1em; border-radius: 25px; font-size: 1rem; font-weight: 700;">@Kitagawa</span>
-       </div>
-       <div class="time" style="font-weight: 700; margin-top: 1em;">20mins ago</div>
-   </div>
-   <!-- content tobe posted -->
-   <div class="card" style="width: 100%;">
-       <img class="card-img-top" src="KITAGAWA.jpg" style="height: 500px; object-fit: cover;" alt="Card image">
-       <div class="card-body">
-           <div class="m-0" id="reactions" style="display: flex; justify-content: space-between;">
-               <div id="like-comment">
-                   <i class="fa-regular fa-heart"></i>
-                   <i class="fa-regular fa-comment"></i>
-               </div>
-               <div id="save">
-                   <i class="fa-solid fa-download"></i>
-               </div>
-           </div>
-           <div class="caption">
-           <p class="card-text py-3"> は恋をする, Hepburn: Sono Bisuku Dōru wa Koi o Suru, transl. "That Bisque Doll Falls in Love" is a Japanese manga series written and illustrated by Shinichi Fukuda.
-                                    It began serialization in Square Enix's Young Gangan in January 2018, and has been compiled in 13 volumes as of May 2024.</p>
-           <!-- <a href="#" class="read-more-link" style="text-decoration: none; color: gray;">... more</a> -->
-           </div>
-          <div class="comment">
-              <input type="text" name="comment" id="comment" placeholder="Add comment ...">
-              <i class="fa-solid fa-paper-plane"></i>
-          </div>
-       </div>
-     </div>
-</div>
-<div id="block-n" class="my-4 px-4 py-2" style="height: auto;">
-    <!-- user and time ago posted --------------post------->
-    <div  id="post" class="py-3">
-       <div class="m-0">
-           <img src="thorfinn.jpg" class="rounded-circle mb-1" style="height: 50px; width: 48px; object-fit: cover;" alt="profile">
-           <span class="mb-4" style=" padding:  1em; border-radius: 25px; font-size: 1rem; font-weight: 700;">@thorfinn</span>
-       </div>
-       <div class="time" style="font-weight: 700; margin-top: 1em;">just now</div>
-   </div>
-   <!-- content tobe posted -->
-   <div class="card" style="width: 100%;">
-       <img class="card-img-top" src="fd0db94b-1a6c-40b1-95f0-b0e1c520f906.jpeg" style="height: 500px; object-fit: cover;" alt="Card image">
-       <div class="card-body">
-           <div class="m-0" id="reactions" style="display: flex; justify-content: space-between;">
-               <div id="like-comment">
-                   <i class="fa-regular fa-heart"></i>
-                   <i class="fa-regular fa-comment"></i>
-               </div>
-               <div id="save">
-                   <i class="fa-solid fa-download"></i>
-               </div>
-           </div>
-           <div class="caption">
-            <p class="card-text py-3">Listen closely, Thorfinn. You don't have any enemies. No one has any enemies.
-                There is no one who it's okay to hurt</p>
-           <!-- <a href="#" class="read-more-link" style="text-decoration: none; color: gray;">... more</a>   -->
-           </div>
-          <div class="comment">
-              <input type="text" name="comment" id="comment" placeholder="Add comment ...">
-              <i class="fa-solid fa-paper-plane"></i>
-          </div>
-       </div>
-     </div>
-</div>
-<div id="block-n" class="my-4 px-4 py-4" style="height: auto;">
-    <!-- user and time ago posted --------------post------->
-    <div  id="post" class="py-3">
-       <div class="m-0">
-           <img src="M.png" class="rounded-circle mb-1" style="height: 50px; width: 48px; object-fit: cover;" alt="profile">
-           <span class="mb-4" style=" padding:  1em; border-radius: 25px; font-size: 1rem; font-weight: 700;">@mushieh_edison</span>
-       </div>
-       <div class="time" style="font-weight: 700; margin-top: 1em;">3h</div>
-   </div>
+<div class="d-flex flex-column" style="border: none;">
+    <div id="n-block" class="col-12 mx-auto">
+        {% for post in posts %}
+        <div id="block-n" class="my-4 px-3 py-4">
+            <!-- user and time ago posted --------------post------->
+            <div id="post" class="py-3">
+                <a href="{{ url_for('account') }}" style="text-decoration: none; color: black;">
+                    <img src="{{ image_file }}" class="rounded-circle mb-1" style="height: 50px; width: 50px; object-fit: cover;" alt="profile">
+                    <span style="font-size: 1rem; font-weight: 700;">@{{ current_user.username }}</span>
+                </a>
+                <div class="time" style="font-weight: 700;">3h</div>
+            </div>
 
-   <!-- content tobe posted -->
-   <div class="card" style="width: 100%;">
-       <img class="card-img-top" src="Canute1021.webp" style="height: 500px; object-fit: cover;" alt="Card image">
-       <div class="card-body">
-           <div class="m-0" id="reactions" style="display: flex; justify-content: space-between;">
-               <div id="like-comment">
-                   <i class="fa-regular fa-heart"></i>
-                   <i class="fa-regular fa-comment"></i>
-               </div>
-               <div id="save">
-                   <i class="fa-solid fa-download"></i>
-               </div>
-           </div>
-           <div class="caption">
-                 <p class="card-text py-3">I will create a worldly paradise in this land. A place of peace and prosperity.
-                                       An ideal country for those who live in suffering...
-                                       Perhaps the work will not be finished in my generation.
-                                       But I will be the one to take that first bold step.— Canute</p>
-                   <!-- <a href="#" class="read-more-link" style="text-decoration: none; color: rgb(10, 10, 10);">... more</a> -->
-           </div>
+            <!-- content to be posted -->
+            <div class="card" style="width: 100%; min-height: 200px; border: none;">
+                <div class="card-body">
+                    <!-- display post -->
+                    {% if post.tweet %}
+                    <div class="card-text text-center py-3">
+                        <p style="font-weight: 700;">{{ post.tweet }}</p>
+                    </div>
+                    {% elif post.mediaPath %}
+                {% if post.mediaPath.endswith('.jpg') or post.mediaPath.endswith('.jpeg') or post.mediaPath.endswith('.png') or post.mediaPath.endswith('.gif') or post.mediaPath.endswith('.webp') %}
+                    <img class="card-img-top" src="{{ url_for('static', filename='post_made/' + post.mediaPath) }}" style="width: 100%; height: auto; object-fit: cover;" alt="Card image">
+                {% elif post.mediaPath.endswith('.mp4') or post.mediaPath.endswith('.avi') or post.mediaPath.endswith('.mov') or post.mediaPath.endswith('.wmv') %}
+                    <video class="card-img-top" controls style="width: 100%; height: auto; object-fit: cover;">
+                        <source src="{{ url_for('static', filename='post_made/' + post.mediaPath) }}" type="video/mp4">
+                    </video>
+                {% endif %}
+            {% endif %}
 
-          <div class="comment">
-              <input type="text" name="comment" id="comment" placeholder="Add comment ...">
-              <i class="fa-solid fa-paper-plane"></i>
-          </div>
-       </div>
-     </div>
+                    <div class="d-flex justify-content-between my-5 py-3" style="border-bottom: 1px solid black;">
+                        <div id="reactions">
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-regular fa-comment mx-3"></i>
+                        </div>
+                        <div id="save">
+                            <i class="fa-solid fa-download"></i>
+                        </div>
+                    </div>
+                    {% if post.caption %}
+                    <div class="caption mt-2 p-3" style="font-weight: 500; background-color: black; color: white;">
+                        <p class="card-text">{{ post.caption }}</p>
+                    </div>
+                    {% endif %}
+                    <div class="comment d-flex mt-3">
+                        <input type="text" name="comment" id="comment" class="form-control" placeholder="Add comment ...">
+                        <i class="fa-solid fa-paper-plane ml-3 mt-5"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 </div>
-</div>
-
   <!-- bottom bar from middle to small screen -->
   <div class="m-0">
     <ul class="nav">
@@ -162,7 +108,7 @@
             <a class="nav-link" href="#"><i class="fa-solid fa-message"></i></a>
         </li>
         <li class="nav-item py-3">
-            <a class="nav-link" href="#"><i class="fa-solid fa-square-plus"></i></a>
+            <a class="nav-link" href="{{url_for('post')}}"><i class="fa-solid fa-square-plus"></i></a>
         </li>
         <li class="nav-item py-3">
             <a class="nav-link" href="#"><i class="fa-solid fa-bell"></i> </a>
