--- a/App/FlaskApp/templates/sign-up.html
+++ b/App/FlaskApp/templates/sign-up.html
@@ -9,7 +9,17 @@
 </head>
 <body>
     <form action="{{ url_for('register')}}" method="POST" class="form-container">
-
+      {% with messages = get_flashed_messages(with_categories=True) %}
+        {% if messages %}
+            <div class="flash-messages">
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
+    {% endwith %}
         <h1>EdArT </h1>
         <div class="mx-4">
             <h3>Sign Up</h3>
